# Connect4-WASM

./: .gitignore  Cargo.toml  README.md  devshell.toml  flake.nix  index.html
src/: col.rs  lib.rs  main.rs  player.rs  tile.rs
src-tauri/: tauri.conf.json
