[package]
name = "connect-four"
version = "0.1.0"
authors = ["patrick"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = "0.18"
css-in-rust = "0.5"
wasm-bindgen = "0.2"
serde_json = { version = "1", features = ["preserve_order"] }
strum = { version = "0.20", features = ["derive"] }
